--- a/easy_ddt/views/easy_ddt_add.xml
+++ b/easy_ddt/views/easy_ddt_add.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<openerp>
-    <data>
+<odoo>
 
         <menuitem id="menu_stock_ddt_data" name="DdT Data"
-                  parent="stock.menu_stock_configuration"/>
+                  parent="stock.menu_stock_root"/>
 
 
         <!--<record id="stock_location_inherit_form" model="ir.ui.view">-->
@@ -199,5 +198,4 @@
                   id="menu_action_transportation_method_tree"
                   parent="menu_stock_ddt_data"/>
 
-    </data>
-</openerp>
+</odoo>
