--- a/easy_ddt/views/report_easy_ddt.xml
+++ b/easy_ddt/views/report_easy_ddt.xml
@@ -37,8 +37,6 @@
                 <td>
                     <h6 name="net_weight">
                         Net Weight
-                        <!--<div class="text-right"-->
-                        <!--t-field="ddt.weight_net"></div>-->
                     </h6>
                 </td>
             </tr>
@@ -210,19 +208,9 @@
                                             </strong>
                                         </h4>
                                     </span>
-                                    <!--Commentato per far stampare indirizzo spedizione WH/INT/00009 che è interno-->
-                                    <!--<t t-foreach="o.ddt_get_location(o.move_lines[0].location_dest_id.id)"-->
-                                       <!--t-as="loca">-->
-                                        <!--<p>-->
-                                            <!--<t t-esc="loca"/>-->
-                                        <!--</p>-->
-                                    <!--</t>-->
                                     <div name="ddt_delivery_address"
                                              t-field="o.partner_id"
                                              t-field-options='{"widget": "contact", "fields": ["address", "name", "phone", "fax"], "no_marker": true}'/>
-                                        <!--<p t-if="o.partner_id.vat">VAT:-->
-                                            <!--<span t-field="o.partner_id.vat"/>-->
-                                        <!--</p>-->
                                 </div>
                             </div>
 
@@ -251,62 +239,69 @@
                         </span>
 
                         <table class="table table-condensed">
+                            <t t-set="has_barcode"
+                               t-value="any([pack_operation.product_id and pack_operation.product_id.sudo().barcode or pack_operation.package_id for pack_operation in o.pack_operation_ids])"/>
+                            <t t-set="has_serial_number" t-value="o.pack_operation_ids.filtered('pack_lot_ids')" groups="stock.group_production_lot"/>
                             <thead>
                                 <tr>
                                     <th>
-                                        <strong>Code</strong>
-                                    </th>
-                                    <th>
-                                        <strong>Description</strong>
-                                    </th>
-                                    <th>
-                                        <strong>UM</strong>
+                                        <strong>Product</strong>
                                     </th>
                                     <th class="text-right">
                                         <strong>Quantity</strong>
                                     </th>
+                                    <th t-if="has_serial_number">
+                                        <strong>Lot/Serial Number</strong>
+                                    </th>
+                                    <t t-if="o.picking_type_id.code != 'outgoing'">
+                                        <th>
+                                            <strong>Destination</strong>
+                                        </th>
+                                    </t>
                                 </tr>
                             </thead>
                             <tbody>
-                                <t t-foreach="o.move_lines" t-as="move">
-                                    <tr>
+                                <t t-set="pack_operation_ids" t-value="o.pack_operation_ids"/>
+                                <t groups="base.group_portal" t-set="pack_operation_ids" t-value="o.pack_operation_ids.sudo()"/>
+                                <tr t-foreach="pack_operation_ids" t-as="pack_operation">
+                                    <td>
+                                        <span t-field="pack_operation.product_id"/>
+                                        <br/>
+                                        <span t-field="pack_operation.product_id.description_picking"/>
+                                        <t t-if="not pack_operation.product_id and pack_operation.package_id">
+                                            <span t-field="pack_operation.package_id"/>
+                                        </t>
+                                    </td>
+                                    <td class="text-right">
+                                        <span t-field="pack_operation.product_qty"/>
+                                        <span t-field="pack_operation.product_uom_id" groups="product.group_uom"/>
+                                    </td>
+                                    <td t-if="has_serial_number">
+                                        <table class="table table-condensed" t-if="pack_operation.pack_lot_ids">
+                                            <tr t-foreach="pack_operation.pack_lot_ids" t-as="packlot">
+                                                <td>
+                                                    <span t-field="packlot.lot_id"/>
+                                                    <t t-if="not packlot.lot_id">
+                                                        <span t-field="packlot.lot_name"/>
+                                                    </t>
+                                                </td>
+                                                <td>
+                                                    <span t-field="packlot.qty"/>
+                                                    <t t-if="o.picking_type_id.use_existing_lots and o.state!='done'">/
+                                                        <span t-field="packlot.qty_todo"/>
+                                                    </t>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                    <t t-if="o.picking_type_id.code != 'outgoing'">
                                         <td>
-                                            <span t-field="move.product_id.product_tmpl_id.default_code"/>
+                                            <span t-field="pack_operation.location_dest_id"/>
+                                            <span t-if="pack_operation.result_package_id">:</span>
+                                            <span t-field="pack_operation.result_package_id"/>
                                         </td>
-                                        <td>
-                                            <span t-field="move.product_id.name"/>
-                                        </td>
-                                        <!--<td>-->
-                                        <!--<span t-field="move.product_uos"/>-->
-                                        <!--</td>-->
-                                        <!--<td class="text-right">-->
-                                        <!--<span t-field="move.product_uos_qty"/>-->
-                                        <!--</td>-->
-                                        <td>
-                                            <span t-field="move.product_uom"/>
-                                        </td>
-                                        <td class="text-right">
-                                            <span t-field="move.product_uom_qty"/>
-                                        </td>
-
-
-                                    </tr>
-                                    <div t-if="move.lot_ids">
-                                        <tr>
-                                            <td colspan="4">
-                                                Lott or SN.:
-                                                <t t-foreach="move.lot_ids" t-as="lot">
-                                                <span t-field="lot.name"/>
-                                                <t t-if="'use_date' in move.lot_ids.fields_get() and lot.use_date">
-                                                    Best before date:
-                                                    <span t-field="lot.use_date"
-                                                          t-field-options='{"format": "d/M/y"}'/>
-                                                </t>
-                                                </t>
-                                            </td>
-                                        </tr>
-                                    </div>
-                                </t>
+                                    </t>
+                                </tr>
                             </tbody>
                         </table>
                         <t t-call="easy_ddt.delivery_data">
@@ -321,10 +316,12 @@
     <template id="report_easy_ddt_main">
         <t t-call="report.html_container">
             <t t-foreach="doc_ids" t-as="doc_id">
-                <!--<t t-raw="translate_doc(doc_id, doc_model, 'easy_ddt.report_easy_ddt')"/>-->
-                <!--<t t-raw="translate_doc(doc_id, doc_model, 'partner_id.lang', 'easy_ddt.report_easy_ddt')"/>-->
-                <t t-call="easy_ddt.report_easy_ddt"
-                   t-lang="docs.partner_id.lang"/>
+                <t t-if="docs.partner_id">
+                    <t t-call="easy_ddt.report_easy_ddt" t-lang="docs.partner_id.lang"/>
+                </t>
+                <t t-if="not docs.partner_id">
+                    <t t-call="easy_ddt.report_easy_ddt" t-lang="docs.company_id.partner_id.lang"/>
+                </t>
             </t>
         </t>
     </template>
